--- a/CREF1 CE 1000 Notebook.ipynb
+++ b/CREF1 CE 1000 Notebook.ipynb
@@ -906,7 +906,7 @@
     "\n",
     "\n",
     "\n",
-    "* What is the present of the mortgage today if the opportunity cost of capita is 12% per annum or 1% per month?\n",
+    "* What is the present of the mortgage today if the opportunity cost of capital is 12% per annum or 1% per month?\n",
     "\n",
     "\n",
     "\n",
@@ -981,7 +981,7 @@
     "* $PV=\\frac{CF_1}{r-g}$ or $\\frac{NOI}{r-g}$ assuming $r>g$\n",
     "\n",
     "\n",
-    "* Cash flow is NOI $\\cdot$ Units $\\cdot$ Occupancy = (1000 - 500) $\\cdot$ 100 $\\cdot$ 0.95 = $\\$$47500\n",
+    "* Cash flow is NOI $\\cdot$ Units $\\cdot$ Occupancy = (1000 - 500) $\\cdot$ 100 $\\cdot$ 0.95 = 47500\n",
     "\n",
     "\n",
     "* $PV = \\frac{47500}{1.01} + \\frac{1.0025 \\cdot 47500}{1.01^2} + ... $\n",
@@ -1221,8 +1221,8 @@
     "\n",
     "\n",
     "* Therefore, total returns can **always** be decomposed into a **current yield** and **capital return**.\n",
-    "    * A bonds has only a yield, making it sensitive to unexpected inflation.  \n",
-    "    * A Pure-growth stock has only a capital return, making it sensitive to expected growth."
+    "    * A bond has only a yield, making it sensitive to unexpected inflation.  \n",
+    "    * A pure-growth stock has only a capital return, making it sensitive to expected growth."
    ]
   },
   {
