--- a/CREF1 CE 1000 Notebook.ipynb
+++ b/CREF1 CE 1000 Notebook.ipynb
@@ -311,7 +311,6 @@
     }
    ],
    "source": [
-    "#from IPython.display import Image\n",
     "url = 'https://upload.wikimedia.org/wikipedia/commons/4/48/Supply-Demand-Graph.png'\n",
     "Image(url, width=400, height=400)"
    ]
@@ -1232,7 +1231,7 @@
     "### Returns and Risk\n",
     "\n",
     "* Risk aversion: \n",
-    "    * **Certainty** is always prefered to a **gamble** (or coin flip) even with the same expected outcome.\n",
+    "    * **Certainty** is always preferred to a **gamble** (or coin flip) even with the same expected outcome.\n",
     "        * A payout of 50 with **certainty** is prefered to a payout of either 0 or 100 from a random coin flip.\n",
     "    * As a result, **investors must be compensated to bear risk**.  \n",
     "\n",
