--- a/CREF1 CE 1000 Notebook.ipynb
+++ b/CREF1 CE 1000 Notebook.ipynb
@@ -1329,7 +1329,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1348,7 +1347,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1423,7 +1421,7 @@
     "\n",
     "\n",
     "\n",
-    "* Different valuations imply a potential *gain from trade# (unless transactions costs are too onerous).\n",
+    "* Different valuations imply a potential **gain from trade** (unless transactions costs are too onerous).\n",
     "    * Recall: this is a basic function of finance: matching the risk preferences (or tolerances) of heterogeneous investors.\n",
     "\n",
     "\n",
@@ -1454,7 +1452,7 @@
     "## 10.3: DCF is direct capitalization\n",
     "* **Short cut**: \n",
     "    * $\\displaystyle{\\text{Value} = \\frac{\\text{NOI}}{\\text{cap rate}} \\Rightarrow \\text{cap rate}=\\frac{\\text{NOI}}{\\text{Value}}}$\n",
-    "    * Therefore, cap rates are yields: NOI as a share of value (if a fully-leased property could be converted to cash immediately.\n",
+    "    * Therefore, cap rates are yields: NOI as a share of value if a fully-leased property could be converted to cash immediately.\n",
     "\n",
     "\n",
     "\n",
