--- a/CAPM Example.ipynb
+++ b/CAPM Example.ipynb
@@ -175,16 +175,28 @@
    "metadata": {},
    "source": [
     "### A Return to the Mathematics\n",
+    "* Let $r_i$ denote the rate of return to asset $i$, $r_f$ denote the known rate of return on a risk-free asset (for example, short-term US government debt), and $r_M$ denote the rate of return to a portfolio (or a market) that includes $i$.  \n",
     "\n",
-    "Let $r_i$ denote the rate of return to asset $i$, $r_f$ denote the known rate of return on a risk-free asset (for example, short-term US government debt), and $r_m$ denote the rate of return to a portfolio (or a market) that includes $i$.  \n",
-    "\n",
-    "The following equation can be derived:\n",
-    "\n",
+    "* The following equation can be derived:\n",
     "$E(r_i)-r_f = \\alpha + \\beta \\cdot (E(r_{Mi})-r_f)$\n",
     "\n",
-    "Here, $E(\\cdot)$ denotes an expected value (because this is a forward-looking prediction).  In CAPM, $\\beta$ captures the sensitivity of an asset’s returns to the returns to a portfolio or to the market on which an asset trades.  In other words, it non-diversifiable risk.  In addition, $\\alpha$ measures an asset $i$’s excess (or abnormal) returns.\n",
     "\n",
-    "Phrases you may have heard: \n",
+    "\n",
+    "* Here, $E(\\cdot)$ denotes an expected value (because this is a forward-looking prediction).  \n",
+    "\n",
+    "\n",
+    "\n",
+    "* In CAPM, $\\beta$ captures the sensitivity of an asset’s returns to the returns to a portfolio or to the market on which an asset trades.  In other words, it non-diversifiable risk.  \n",
+    "\n",
+    "\n",
+    "\n",
+    "* In addition, $\\alpha$ measures an asset $i$’s excess (or abnormal) returns.\n",
+    "\n",
+    "\n",
+    "\n",
+    "* Phrases you may have heard: \n",
+    "\n",
+    "\n",
     "\n",
     "1. The stock's beta is high\n",
     "2. The hedge fund is chasing alpha"
